refactor: 优化文章分页查询模块代码规范
- 提取常量避免硬编码（TAG_ID_SEPARATOR、分页参数等）
- 统一使用List.of()替代Collections.emptyList()
- 改进SQL查询避免SELECT *，明确指定字段
- 优化异常处理和变量命名
- 修复JavaDoc注释错误
- 提升代码可读性和维护性